--- a/src/main/resources/application-db.properties
+++ b/src/main/resources/application-db.properties
@@ -1,9 +1,13 @@
 # 数据库访问配置
 # 数据库驱动、连接、用户名、密码
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.1.131/mdni_oa_dev?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true&allowMultiQueries=true
-spring.datasource.username=mdndev
-spring.datasource.password=mdndev123456
+#spring.datasource.url=jdbc:mysql://192.168.1.131/mdni_oa_dev?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true&allowMultiQueries=true
+#spring.datasource.username=mdndev
+#spring.datasource.password=mdndev123456
+spring.datasource.url=jdbc:mysql://127.0.0.1/mdni_sale_service?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true&allowMultiQueries=true
+spring.datasource.username=root
+spring.datasource.password=13145956
+
 # 初始化大小，最小，最大
 spring.datasource.initialSize=20
 spring.datasource.minIdle=20
