--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,12 @@ pagehelper.reasonable=true
 pagehelper.offset-as-page-num=true
 pagehelper.row-bounds-with-count=true
 # redis配置
-spring.redis.database=15
-spring.redis.host=192.168.1.131
-spring.redis.password=123456
+spring.redis.database=11
+spring.redis.host=127.0.0.1
+spring.redis.password=paofan0077
+#spring.redis.database=15
+#spring.redis.host=192.168.1.131
+#spring.redis.password=123456
 spring.redis.port=6379
 spring.redis.timeout=30000
 spring.redis.pool.max-idle=50
